# stp

./: .clang-format  .codacy.yml  .dockerignore  .gitignore  .gitmodules  .travis-cmake.sh  .travis.yml  AUTHORS  CMakeLists.txt  CODING_GUIDELINES  CODING_GUIDLINES  COPYRIGHT  DOWNLOAD  Docker.ubuntu20  Dockerfile  INSTALL  INSTALL.md  LICENSE  LICENSE_COMPONENTS  Makefile  Makefile.common  Makefile.in  Makefile.smt  README  README.markdown  STPConfig.cmake.in  STPConfigVersion.cmake.in  appveyor.yml  clean-install  clean-install.sh  config.info  configure  liblinks.sh
examples/simple/: CMakeLists.txt  README  README.md  example.c
lib/: CMakeLists.txt
lib/AST/: ASTBVConst.cpp  ASTInterior.cpp  ASTKind.kinds  ASTNode.cpp  ASTSymbol.cpp  ASTUtil.cpp  ASTmisc.cpp  ArrayTransformer.cpp  CMakeLists.txt  MutableASTNode.cpp  RunTimes.cpp  genkinds.pl
lib/AbsRefineCounterExample/: AbstractionRefinement.cpp  ArrayTransformer.cpp  CMakeLists.txt  CounterExample.cpp
lib/Globals/: CMakeLists.txt  Globals.cpp
lib/Interface/: CMakeLists.txt  c_interface.cpp  cpp_interface.cpp
lib/NodeFactory/: CMakeLists.txt  HashingNodeFactory.cpp  NodeFactory.cpp  SimplifyingNodeFactory.cpp  TypeChecker.cpp
lib/Parser/: CMakeLists.txt  LetMgr.cpp  cvc.lex  cvc.y  smt.lex  smt.y  smt2.lex  smt2.y
lib/Printer/: AssortedPrinters.cpp  BenchPrinter.cpp  CMakeLists.txt  CPrinter.cpp  GDLPrinter.cpp  LispPrinter.cpp  PLPrinter.cpp  SMTLIB1Printer.cpp  SMTLIB2Printer.cpp  SMTLIBPrinter.cpp  dotPrinter.cpp
lib/STPManager/: CMakeLists.txt  STP.cpp  STPManager.cpp
lib/Sat/: CMakeLists.txt  Cadical.cpp  CryptoMinisat.cpp  CryptoMinisat4.cpp  CryptoMinisat5.cpp  Kissat.cpp  MergeSatCore.cpp  MinisatCore.cpp  MinisatCore_prop.cpp  RissCore.cpp  SimplifyingMinisat.cpp
lib/Simplifier/: AIGSimplifyPropositionalCore.cpp  BVSolver.cpp  CMakeLists.txt  DifficultyScore.cpp  FindPureLiterals.cpp  Flatten.cpp  MutableASTNode.cpp  NodeDomainAnalysis.cpp  PropagateEqualities.cpp  PropagateEqualitiesOld.cpp  RemoveUnconstrained.cpp  Rewriting.cpp  Simplifier.cpp  SplitExtracts.cpp  StrengthReduction.cpp  SubstitutionMap.cpp  UnsignedIntervalAnalysis.cpp  UnsignedIntervalSetAnalysis.cpp  UseITEContext.cpp  ValueSetAnalysis.cpp  VariablesInExpression.cpp  bvsolver.cpp  consteval.cpp  simplifier.cpp
lib/ToSat/: BBNodeManagerAIG.cpp  BitBlaster.cpp  CMakeLists.txt  ToCNFAIG.cpp  ToSATAIG.cpp  ToSATBase.cpp
lib/Util/: CMakeLists.txt  Functions.cpp  GitSHA1.cpp.in  GitSHA1.h  RunTimes.cpp  apply.cpp  checkEqual.include  constants.h  measure.cpp  test_cbitp.cpp  time_cbitp.cpp
lib/extlib-abc/: CMakeLists.txt  aig.h  cnf.h  cnf_short.h  dar.h  darInt.h  kit.h  leaks.h  vec.h  vecFlt.h  vecInt.h  vecPtr.h  vecStr.h  vecVec.h
lib/extlib-constbv/: CMakeLists.txt  constantbv.cpp  constantbv.h
src/: CMakeLists.txt  config.h.in
src/AST/: AST.cpp  AST.h  ASTBVConst.cpp  ASTBVConst.h  ASTInterior.cpp  ASTInterior.h  ASTInternal.h  ASTInternalWithChildren.h  ASTKind.kinds  ASTNode.cpp  ASTNode.h  ASTSymbol.cpp  ASTSymbol.h  ASTUtil.cpp  ASTUtil.h  ASTmisc.cpp  AbstractionRefinement.cpp  ArrayTransformer.cpp  ArrayTransformer.h  BitBlast.cpp  CMakeLists.txt  Makefile  RunTimes.cpp  RunTimes.h  SimpBool.cpp  ToCNF.cpp  ToSAT.cpp  TopLevel.h  Transform.cpp  UsefulDefs.h  asttest.cpp  bbtest.cpp  cnftest.cpp  genkinds.pl
src/STPManager/: CMakeLists.txt  DifficultyScore.cpp  DifficultyScore.h  Makefile  NodeIterator.h  STP.cpp  STP.h  STPManager.cpp  STPManager.h  UserDefinedFlags.h
src/absrefine_counterexample/: AbsRefine_CounterExample.h  AbstractionRefinement.cpp  CMakeLists.txt  CounterExample.cpp  Makefile
src/abstraction-refinement/: AbstractionRefinement.cpp  Makefile
src/bitvec/: Makefile  consteval.cpp
src/c_interface/: CMakeLists.txt  Makefile  c_interface.cpp  c_interface.h
src/const-evaluator/: Makefile  consteval.cpp
src/constantbv/: Makefile  constantbv.cpp
src/counterexample/: Makefile
src/cpp_interface/: CMakeLists.txt  Makefile  cpp_interface.cpp  cpp_interface.h
src/extlib-abc/: CMakeLists.txt  Makefile  cnf_short.h  kit.h  vec.h  vecAtt.h
src/extlib-constbv/: CMakeLists.txt  Makefile  constantbv.cpp  constantbv.h
src/globals/: CMakeLists.txt  Globals.cpp  Globals.h
src/interface/: CMakeLists.txt
src/libstp/: CMakeLists.txt
src/main/: CMakeLists.txt  GitSHA1.cpp.in  Globals.cpp  Globals.h  Makefile  STPProgramGlobals.cpp  getGitVersion.sh  main.cpp
src/ocaml-wrapper/: COPYRIGHT-NOTICE  libstp.idl  stpvc.mli
src/parser/: .PL.y.swp  CMakeLists.txt  CVC.lex  CVC.y  LetMgr.cpp  LetMgr.h  Makefile  ParserInterface.h  cvc.lex  cvc.y  cvclib.y  let-funcs.cpp  let-funcs.h  main.cpp  parser.h  smt.lex  smt.y  smt2.lex  smt2.y  smtlib.lex  smtlib.y  smtlib2.lex  smtlib2.y
src/printer/: AssortedPrinters.cpp  AssortedPrinters.h  BenchPrinter.cpp  CMakeLists.txt  CPrinter.cpp  GDLPrinter.cpp  LispPrinter.cpp  Makefile  PLPrinter.cpp  SMTLIB1Printer.cpp  SMTLIB2Printer.cpp  SMTLIBPrinter.cpp  SMTLIBPrinter.h  dotPrinter.cpp  printers.h
src/sat/: CMakeLists.txt  CryptoMinisat.cpp  CryptoMinisat.h  CryptoMinisat4.cpp  CryptoMinisat4.h  Makefile  MinisatCore.cpp  MinisatCore.h  MinisatCore_prop.cpp  MinisatCore_prop.h  SATSolver.h  SimplifyingMinisat.cpp  SimplifyingMinisat.h  sat.h
src/simplifier/: AIGSimplifyPropositionalCore.h  AlwaysTrue.h  CMakeLists.txt  CountOfSymbols.h  EstablishIntervals.cpp  EstablishIntervals.h  FindPureLiterals.h  Makefile  MutableASTNode.cpp  MutableASTNode.h  PropagateEqualities.cpp  PropagateEqualities.h  RemoveUnconstrained.cpp  RemoveUnconstrained.h  SubstitutionMap.cpp  SubstitutionMap.h  Symbols.h  UseITEContext.h  VariablesInExpression.cpp  VariablesInExpression.h  bvsolver.cpp  bvsolver.h  bvsolverExp.cpp  bvsolverExp.h  consteval.cpp  simplifier.cpp  simplifier.h
src/to-sat/: BBNode.h  BBNodeManager.h  BBNodeManagerASTNode.h  BitBlast.cpp  BitBlast.h  BitBlastNew.cpp  (+15 more)
tests/: CMakeLists.txt  lit-unit-tests-common.cfg  lit-unit-tests-common.site.cfg.in
tools/: CMakeLists.txt  container-default-command.sh  rewrite_rule_gen.cpp  time_cbitp.cpp
(+1194 files in other folders)
